--- a/proj/proj_template/Makefile
+++ b/proj/proj_template/Makefile
@@ -26,7 +26,7 @@ DEFINES += NDEBUG
 #DEFINES += NPROFILE
 
 # Uncomment to include specified model in built binary
-DEFINES += INCLUDE_MODEL_PDTI8
+#DEFINES += INCLUDE_MODEL_PDTI8
 #DEFINES += INCLUDE_MODEL_MICRO_SPEECH
 #DEFINES += INCLUDE_MODEL_MAGIC_WAND
 #DEFINES += INCLUDE_MODEL_MNV2
@@ -35,6 +35,7 @@ DEFINES += INCLUDE_MODEL_PDTI8
 #DEFINES += INLCUDE_MODEL_MLCOMMONS_TINY_V01_IMGC
 #DEFINES += INLCUDE_MODEL_MLCOMMONS_TINY_V01_KWS
 #DEFINES += INLCUDE_MODEL_MLCOMMONS_TINY_V01_VWW
+DEFINES += INLCUDE_MODEL_MNIST_NN
 
 # Uncomment to include all TFLM examples (pdti8, micro_speech, magic_wand)
 #DEFINES += INCLUDE_ALL_TFLM_EXAMPLES
